--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -9,19 +9,21 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "next": "^12.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
+    "autoprefixer": "^10.4.4",
     "babel-jest": "^27.5.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
-    "react-test-renderer": "^18.0.0"
+    "postcss": "^8.4.12",
+    "react-test-renderer": "^18.0.0",
+    "tailwindcss": "^3.0.23"
   }
 }
